# yaya

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: tests.yml
.migration/state-engine-v2/: DESIGN.md  EVIDENCE.md  PLAN.md  README.md
custom_components/yeelight_pro/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  cover.py  device_trigger.py  diagnostics.py  entity.py  event.py  fan.py  helpers.py  light.py  manifest.json  number.py  platform.py  select.py  sensor.py  strings.json  switch.py
custom_components/yeelight_pro/core/: __init__.py  capabilities.py  commands.py  discovery.py  events.py  exceptions.py  protocol.py  topology.py  updates.py
custom_components/yeelight_pro/core/devices/: __init__.py  air_condition.py  curtain.py  factory.py  light.py  sensor.py  trigger.py
custom_components/yeelight_pro/gateway/: __init__.py  coercion.py  const.py  events.py  protocol.py  updates.py
custom_components/yeelight_pro/gateway/devices/: __init__.py  base.py  bath_heater.py  curtain.py  sensor.py  switch.py
custom_components/yeelight_pro/session/: __init__.py  _snapshot.py  actor.py  client.py  connection.py  events.py  gateway.py  motor.py  rpc.py  runtime.py  state.py  status.py
custom_components/yeelight_pro/session/actors/: __init__.py  base.py  connection.py  device_state.py  session.py
custom_components/yeelight_pro/session/messages/: __init__.py  connection.py  enums.py  public.py  session.py  state.py
custom_components/yeelight_pro/session/model/: __init__.py  intent.py  motor.py  optimistic.py  pending.py  state.py
custom_components/yeelight_pro/session/runtime/: __init__.py  gateway.py
custom_components/yeelight_pro/session/transport/: __init__.py  rpc.py
custom_components/yeelight_pro/translations/: en.json  zh-Hans.json
dev_tools/: __init__.py  yeelight_pro_cli.py
docs/: state-synchronization.md
tests/ha/: README.md  conftest.py  test_action_errors.py  test_config_flow.py  test_integration_runtime.py  test_light_transition.py
tests/unit/: test_cli.py  test_devices.py  test_ha_helpers.py  test_packaging_layout.py  test_protocol_and_state.py  test_rpc_and_client.py  test_session_runtime.py  test_state_store.py
tests/unit/fixtures/: topology-direct.json
