[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "yeelight-pro"
version = "0.1.0"
description = "Async local control library for Yeelight Pro gateways"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = [".", "custom_components"]
include = ["dev_tools*", "yeelight_pro*"]

[project.scripts]
yeelight-pro = "dev_tools.yeelight_pro_cli:main"

[tool.uv]
package = true
link-mode = "copy"

[tool.ruff]
line-length = 120
src = [".", "custom_components", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["yeelight_pro"]
