[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "yeelight-pro"
version = "0.2.2"
description = "Async local control library for Yeelight Pro gateways"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.6",
    "mypy>=1.17",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
ha-test = [
    "pytest-homeassistant-custom-component==0.13.316 ; python_full_version >= '3.13.2'",
]

[tool.setuptools.packages.find]
where = [".", "custom_components"]
include = ["dev_tools*", "yeelight_pro*"]

[project.scripts]
yeelight-pro = "dev_tools.yeelight_pro_cli:main"

[tool.uv]
package = true
link-mode = "copy"

[tool.ruff]
line-length = 120
src = [".", "custom_components", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["yeelight_pro"]

[tool.mypy]
python_version = "3.13"
follow_imports = "silent"
explicit_package_bases = true
files = [
    "custom_components/yeelight_pro/session/state.py",
    "custom_components/yeelight_pro/session/actors",
    "custom_components/yeelight_pro/session/messages",
    "custom_components/yeelight_pro/session/model",
    "custom_components/yeelight_pro/session/transport",
]
